[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/MainMenuRoom.gd" type="Script" id=1]
[ext_resource path="res://ui/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DKeyboard.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=13]

[node name="MainMenuRoom" type="Spatial"]
script = ExtResource( 1 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 5 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 3 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 6 )]
ui_raycast_visible_button = -1

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 10 )]
info_label_visible = false

[node name="ChangeLogLabel" parent="." instance=ExtResource( 7 )]
transform = Transform( -2, 0, -3.01992e-07, 0, 2, 0, 3.01992e-07, 0, -2, 0, 1.6, 1 )
text = "Look behind you!"
margin = 32
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="StatisticsTextLabel" parent="." instance=ExtResource( 7 )]
transform = Transform( -8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, -1, 1.6, 0 )
margin = 32
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="InfoTextLabel" parent="." instance=ExtResource( 7 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.6, -1 )
margin = 32
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="MainMenu" parent="." instance=ExtResource( 9 )]
transform = Transform( 2.62268e-07, 0, -2, 0, 2, 0, 2, 0, 2.62268e-07, 1, 1.6, 0 )

[node name="MainMenu" parent="MainMenu" instance=ExtResource( 2 )]

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 13 )]
transform = Transform( 2, 0, 0, 0, 1.41421, -1.41421, 0, 1.41421, 1.41421, 0, 3, -0.542851 )
visible = false

[node name="OQ_UI2DKeyboard" parent="." instance=ExtResource( 11 )]
transform = Transform( -7.57103e-08, 1, -1.73205, 4.37114e-08, 1.73205, 1, 2, 0, -8.74228e-08, 0.85, 0.85, 0 )
show_text_input = false
